# optimization_study

./: .gitignore  README.md  experiment_template.ipynb  main.py  onnx_convert.py  onnx_optimum_inference.py  ort_bf16_convert.py  ort_quantization.py  pyproject.toml  vllm_inference.py
optimization/convert/: onnx_convert.py
optimization/converting/: onnx_convert.py
optimization/dataset/: 2112.06905.csv  2112.07076.csv
optimization/dimension/: blessing_of_dimension.ipynb
optimization/efficient_expand/: eeve.py  expand_context.py  longrope.py  positional_interpolation.py  rope.py  yarn.py
optimization/expand_sequence/: expand_context.py
optimization/inference/: onnx_optimum_inference.py  vllm_inference.py
optimization/modeling/: attention.py
optimization/prompt/: postprocessing.py  preprocessing.py  prompt_maker.py
optimization/quantization/: autoawq.py  awq.py  ort_quantization.py  qlora_merge.py  quantize.py
optimization/sparsity/: relu_strikes_back.py
optimization/tokenizer/: bbpe.py  bpe.py  tiktokenizer.py  wordpiece.py
