[project]
name = "optimization-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "autoawq>=0.2.9",
    "bitsandbytes>=0.45.5",
    "flash-attn>=2.7.4.post1",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "optimum>=1.25.3",
    "peft>=0.15.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "vllm>=0.8.5.post1",
]
